[package]
name = "Rust_lab"
version = "0.1.0"
edition = "2024"

[dependencies]
sscanf = "0.4"
regex = "1"
crossterm = "0.27"         # Or latest version from https://crates.io/crates/crossterm
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
printpdf = "0.6"
lazy_static = "1.4"
rodio = "0.17"
rand = "0.8"


[[bin]]
name = "Rust_lab"
path = "src/extended.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = true